<resources>
    <string name="app_name">homeworkNumberTwo</string>
    <string name="main">Main</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="receiving">Receiving</string>
    <string name="sending">Sending</string>
    <string name="settings">Settings</string>
    <string name="please_enter_the_text">Please, enter the text</string>
</resources>