<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_main"
        android:title="@string/main" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/contactsFragment"
        android:icon="@drawable/ic_contacts"
        android:title="@string/contacts" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/sendingFragment"
        android:icon="@drawable/ic_sending"
        android:title="@string/sending" />
</menu>